# uqct

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  composite_perm.txt  entrypoint.sh  inspect_h5.py  lamino.txt  lamino_perm.txt  lung.txt  lung_perm.txt  pyproject.toml  remove_wrong_jobid.py  setup.py  test.py  test_unet.py  verify_fix.py
cluster_scripts/: bootstrap_eval.sh  bootstrapping_eval.sh  monitor_jobs.py  run_boundary_on_recent.py  sparse_eval.sh
notebooks/: Bootstrapping.ipynb  Datasets.ipynb  Datasets_Astra.ipynb  Debugging.ipynb  Eval.ipynb  Eval_dense.ipynb  Eval_dense_ICML.ipynb  Hoeffding.ipynb  Optimize_Guidance_LR.ipynb  Sparse_Eval.ipynb  UNet.ipynb  Untitled.ipynb
scripts/: calibrate_equivariant_bootstrap.py  calibrate_skrock.py  check_skrock.py  compare_bootstrap_methods.py  compute_alpha_calibration.py  compute_uq_skrock_eb.py  diffusion_ablation.sh  eval_dense.sh  opt_nll_mixture.py  plot_ci_width_comparison.py  plot_equivariant_bootstrap_verification.py  plot_skrock_preliminary.py  plot_skrock_uq.py  plot_uq_alpha_cal.py  plot_uq_comparison.py  plot_uq_comparison_paper.py  rename_boundary_outputs.py  run_calibration_window.py  submit_bundled.sh  submit_calibration_window.sh  submit_equivariant_bootstrapping.sh  submit_skrock.sh  verify_skrock_calibration.py
tests/: test_skrock.py  verify_bootstrap_correction.py
uqct/: __init__.py  consolidate_runs.py  ct.py  debugging.py  experiment_ause.py  loading.py  logging.py  metrics.py  settings.toml  uq.py  utils.py
uqct/cseqs/: slm.py
uqct/datasets/: __init__.py  base_dataset.py  ellipses_dataset.py  nii_tomogram_dataset.py  tiff_tomogram_dataset.py  tomogram_dataset.py  utils.py
uqct/eval/: bootstrapping.py  cli.py  dense.py  dense_samples.py  diffusion.py  diffusion_boundary.py  distance.py  equivariant_bootstrapping.py  fbp.py  iterative.py  nll_constraints.py  options.py  run.py  skrock.py  unet.py  unet_ensemble.py
uqct/evaluation/: eval_dense.py
uqct/model_eval/: diffusion.py  experiment.py  iterative.py  options.py
uqct/models/: diffusion.py  guided_diffusion.py  iterative.py  tomographic_diffusion.py  unconditional_diffusion.py  unet.py  utils.py
uqct/models/inference/: export.py
uqct/other_methods/: bootstrapping.py  equivariant_bootstrapping.py  skrock.py
uqct/training/: conditional_diffusion.py  diffusion.py  unconditional_diffusion.py  unet.py
uqct/training/cluster/: all-unets.sh  diffusion.sh  unconditional_diffusion.sh  unet.sh
uqct/vis/: analyze_distance.py  plot_boundary_samples.py  plot_correlations.py  plot_distance_uncertainty.py  plot_example_reconstructions.py  plot_examples.py  plot_lamino_combined.py  plot_metrics_vs_intensity.py  plot_psnr_vs_intensity.py  plot_rotation.py  plot_runs.py  plot_scaling.py  plot_uq.py  style.py  verify_consistency.py
