[project]
name = "uqct"
version = "0.0.1"
description = "Uncertainty Quantification for Computed Tomography"
authors = [{ name = "Matteo Gätzner" }, { name = "Johannes Kirschner" }]
requires-python = ">=3.12"
dependencies = [
  "scikit-image",
  "h5py",
  "xarray",
  "nibabel",
  "huggingface_hub",
  "diffusers",
  "tensorboard",
  "wandb",
  "lovely-tensors",
  "opencv-python",
  "astra-toolbox==2.4.0",
  "torchmetrics>=1.8.2",
  "gitpython>=3.1.45",
  "einops>=0.8.2",
  "onnxruntime>=1.23.2",
  "tensorrt>=10.14.1.48.post1",
  "pyarrow>=23.0.0",
]

[tool.uv]
default-groups = ["base"]
dependency-metadata = [
  { name = "astra-toolbox", version = "2.4.0", requires-dist = [
  ], requires-python = ">=3.6" },
]

[dependency-groups]
base = [
  "torch==2.9.0",
  "torchvision",
  "tqdm",
  "numpy==2.3.3",
  "pandas",
  "scipy",
  "matplotlib",
  "jupyterlab",
  "ipywidgets",
  "notebook",
]

dev = [
  "pdbpp>=0.12.0.post1",
  "ruff>=0.14.4",
  "mypy",
  "pre-commit",
  "types-setuptools",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["uqct"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "UP"]
ignore = ["N812", "E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
